--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "url_shortener",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^5.2.1",
+    "mongoose": "^9.2.1",
+    "nanoid": "^5.1.6",
+    "nodemon": "^3.1.11"
+  }
 }
